@@ -1,4 +1,5 @@
-requires 'Moose' => '0.90';
+requires Moo => 2;
+requires 'Types::Standard';
 requires 'Time::HiRes';
 requires 'DBIx::Class' => '0.07000';
 
